--- a/views/consultamodificacion.hbs
+++ b/views/consultamodificacion.hbs
@@ -10,7 +10,7 @@
 
     <title>Consultar para modificar</title>
   </head>
-  <body>
+  <body style="background-color: antiquewhite;">
 
     <!-- Optional JavaScript; choose one of the two! -->
 
