--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,7 +4,7 @@
     <title>Mantenimiento de Alumnos</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
-  <body>
+  <body style="background-color: antiquewhite;">
     {{{body}}}
   </body>
 </html>
