--- a/views/listaralumnos.hbs
+++ b/views/listaralumnos.hbs
@@ -10,7 +10,7 @@
 
     <title>Buenas noches</title>
   </head>
-  <body>
+  <body style="background-color: antiquewhite;">
 
     <!-- Optional JavaScript; choose one of the two! -->
 
