--- a/views/mensajealumnos.hbs
+++ b/views/mensajealumnos.hbs
@@ -10,7 +10,7 @@
 
     <title>Alta</title>
   </head>
-  <body>
+  <body style="background-color: antiquewhite;">
     
 
     <!-- Optional JavaScript; choose one of the two! -->
